--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ REDIS_STREAM_NAME=social_posts_stream
 REDIS_CONSUMER_GROUP=sentiment_workers
 REDIS_CACHE_PREFIX=sentiment_cache
 
+# Ingester Configuration
+POSTS_PER_MINUTE=60
+
 # ===============================
 # AI / ML Configuration
 # ===============================
