ingester, redis streams, worker pipeline

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -2,4 +2,15 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-CMD ["sleep", "infinity"]
+# Install dependencies
+COPY worker/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy shared backend application code
+COPY backend/app ./app
+
+# Copy worker code
+COPY worker/worker.py .
+COPY worker/processor.py .
+
+CMD ["python", "worker.py"]
