--- a/ingester/Dockerfile
+++ b/ingester/Dockerfile
@@ -2,4 +2,9 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-CMD ["sleep", "infinity"]
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY ingester.py .
+
+CMD ["python", "ingester.py"]
