--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,13 @@
 # Database Configuration (PostgreSQL)
 # ===============================
 POSTGRES_USER=sentiment_user
-POSTGRES_PASSWORD=<student-provides-secure-password>
+POSTGRES_PASSWORD=postgres123
 POSTGRES_DB=sentiment_db
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+
+DATABASE_URL=postgresql+asyncpg://sentiment_user:postgres123@postgres:5432/sentiment_db
+
 
 # ===============================
 # Redis Configuration
@@ -17,7 +19,9 @@ REDIS_STREAM_NAME=social_posts_stream
 REDIS_CONSUMER_GROUP=sentiment_workers
 REDIS_CACHE_PREFIX=sentiment_cache
 
+# ===============================
 # Ingester Configuration
+# ===============================
 POSTS_PER_MINUTE=60
 
 # ===============================
@@ -25,8 +29,9 @@ POSTS_PER_MINUTE=60
 # ===============================
 HUGGINGFACE_MODEL=distilbert-base-uncased-finetuned-sst-2-english
 EMOTION_MODEL=j-hartmann/emotion-english-distilroberta-base
+
 EXTERNAL_LLM_PROVIDER=groq
-EXTERNAL_LLM_API_KEY=<student-provides-api-key>
+EXTERNAL_LLM_API_KEY=dummy_api_key
 EXTERNAL_LLM_MODEL=llama-3.1-8b-instant
 
 # ===============================
